# ffmt

./: .gitignore  .markdownlint.json  .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md  action.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  update-readme-version.yml
docs/: ci.md  configuration.md  editors.md  getting-started.md  index.md  requirements.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: format_string.rs
site/: 404.html  index.html  sitemap.xml
site/ci/: index.html
site/configuration/: index.html
site/editors/: index.html
site/getting-started/: index.html
site/search/: search_index.json
src/: align.rs  case_norm.rs  classifier.rs  cli.rs  config.rs  formatter.rs  keyword_norm.rs  lib.rs  lsp.rs  main.rs  reader.rs  scope.rs  unicode.rs  whitespace.rs
tests/: bugfixes.rs  bughunt_classifier.rs  bughunt_cli.rs  bughunt_norm.rs  case_norm.rs  classifier.rs  cli_bugs.rs  config_integration.rs  integration.rs  reader.rs  scope.rs  whitespace.rs
tests/fixtures/: blank_lines.expected.fpp  blank_lines.input.fpp  call_block.expected.fpp  call_block.input.fpp  directives.expected.fpp  directives.input.fpp  doxygen_spacing.expected.fpp  doxygen_spacing.input.fpp  fypp.expected.fpp  fypp.input.fpp  member_access_wrap.expected.fpp  member_access_wrap.input.fpp  simple.expected.fpp  simple.input.fpp  trailing_comment_wrap.expected.fpp  trailing_comment_wrap.input.fpp
